--- a/live coding/index.html
+++ b/live coding/index.html
@@ -20,16 +20,23 @@
 
     <form onsubmit="aggiungiAppuntamento(event)">
         <input type="text" id="nome" placeholder="Inserisci il titolo" required>
-        <input type="datetime-local" id="data"  required>
+        <input type="datetime-local" id="data" required>
         <input type="text" id="luogo" placeholder="Dove?" required>
         <input type="color" id="colore" required>
 
         <!-- submit di default -->
         <button>Prenota</button>
     </form>
-    
+
     <h1>I miei appuntamenti</h1>
-    <div class="appuntamenti"></div>
+    <div class="appuntamenti">
+        
+    </div>
+    <!-- <div class="card">
+        <h3></h3>
+        <p></p>
+    </div> -->
+
     <script src="./script.js"></script>
 </body>
 
